--- a/config.yaml
+++ b/config.yaml
@@ -21,6 +21,8 @@ index_filenames: [ 'index.html' ]
 # before and after the last site compilation.
 enable_output_diff: false
 
+base_url: 'http://fosdem.org'
+
 prune:
   # Whether to automatically remove files not managed by nanoc from the output
   # directory. For safety reasons, this is turned off by default.
