--- a/Rules
+++ b/Rules
@@ -123,12 +123,20 @@ end
 
 # deploy content/assets/style/foo.css as output/assets/style/foo.css
 # (without this, nanoc would deploy it as output/assets/style/foo/index.html)
-route '/assets/style/*' do
-  require 'digest/sha2'
-  sha = Digest::SHA256.new
-  sha << item.raw_content
-  digest = sha.hexdigest.downcase
-  "#{item.identifier.chop}-#{digest}.#{item[:extension]}"
+route '/assets/*/' do
+  if @site.config[:digest_assets] then
+    require 'digest/sha2'
+    sha = Digest::SHA256.new
+    if item.binary? then
+      sha << IO.read(item[:filename])
+    else
+      sha << item.raw_content
+    end
+    digest = sha.hexdigest.downcase
+    "#{item.identifier.chop}-#{digest}.#{item[:extension]}"
+  else
+    "#{item.identifier.chop}.#{item[:extension]}"
+  end
 end
 
 # do _not_ deploy the files under content/sponsors/ as they are only used
