add link for schedule in navigation

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -6,7 +6,7 @@ navigation:
     - /about/fosdem/
     - /about/sponsors/
     - /about/faq/
-  - Schedule:
+  - /schedule/:
     - /schedule/events/
     - /schedule/tracks/
   - Practical Information:
