--- a/Rules
+++ b/Rules
@@ -12,6 +12,28 @@
 ##### PREPROCESSING
 preprocess do
 
+  # Determine the prefix for output paths and absolute links by using either
+  # the "config" setting in config.yaml, if present, or, better, determine it
+  # automatically from the schedule information that is exported from Pentabarf,
+  # by looking up the first conference day and using the year as the prefix.
+  # Note that this must be done as the *FIRST* thing in the preprocessing, as
+  # we reference that $prefix global variable in a lot of places (for performance
+  # reasons, rather than looking it up each time):
+  $prefix ||= begin
+                if config[:prefix]
+                  config[:prefix]
+                else
+                  # search the first day item
+                  first_day = begin
+                                d = @items.select{|i| i.identifier =~ %r{^/schedule/day/[^/]+/$}}.sort_by{|d| d[:conference_day]}.first
+                                raise "failed to find item with identifier /schedule/day/..." unless d
+                                d[:conference_day]
+                              end
+                  # the prefix of the site is the year
+                  "/" + first_day.year.to_s
+                end
+              end
+
   ### CREATE ITEMS
   # Create some items programatically
 
@@ -160,8 +182,11 @@ compile '*' do
 
       # transform absolute paths in URLs with relative paths using the
       # relativize_paths filter (that is shipped with nanoc)
-      # *** OPTIMIZATION: don't use it as of now, wins a few seconds ***
-      #filter :relativize_paths, :type => :xhtml unless item[:relativize] == false
+      # ***
+      # OPTIMIZATION: don't apply it to schedule pages, as they already
+      # render absolute paths that are correct, wins a few seconds
+      # ***
+      #filter :relativize_paths, :type => :xhtml unless item[:relativize] == false or item.identifier =~ %r{^/schedule/.+}
 
       # use layout/default.html for all items, except
       # sponsor pages and pages that have "layout: false"
@@ -210,23 +235,23 @@ route '/photos/*' do
              ""
            end
 
-  "/schedule/speaker/#{name}#{suffix}.#{ext}"
+  "#{$prefix}/schedule/speaker/#{name}#{suffix}.#{ext}"
 end
 
 route '/schedule/xcal/track/*' do
-  '/schedule/track/' + item.identifier.split('/')[-1] + ".xcs"
+  "#{$prefix}/schedule/track/#{item.identifier.split('/')[-1]}.xcs"
 end
 route '/schedule/ical/track/*' do
-  '/schedule/track/' + item.identifier.split('/')[-1] + ".ics"
+  "#{$prefix}/schedule/track/#{item.identifier.split('/')[-1]}.ics"
 end
 route '/schedule/pentabarf/' do
-  '/schedule/xml'
+  "#{$prefix}/schedule/xml"
 end
 route '/schedule/xcal/' do
-  '/schedule/xcal'
+  "#{$prefix}/schedule/xcal"
 end
 route '/schedule/ical/' do
-  '/schedule/ical'
+  "#{$prefix}/schedule/ical"
 end
 
 # route /headlines/* into oblivion as they don't really exist on
@@ -245,7 +270,7 @@ route '/assets/style/*/' do
            else
              ""
            end
-  "#{item.identifier.chop}#{suffix}.#{item[:extension]}"
+  "#{$prefix}#{item.identifier.chop}#{suffix}.#{item[:extension]}"
 end
 route '/assets/*/' do
   suffix = if @site.config[:digest_assets]
@@ -253,7 +278,7 @@ route '/assets/*/' do
            else
              ""
            end
-  "#{item.identifier.chop}#{suffix}.#{item[:extension]}"
+  "#{$prefix}#{item.identifier.chop}#{suffix}.#{item[:extension]}"
 end
 
 route %r{^/schedule/(thumbnail|photo)/speaker/} do
@@ -273,7 +298,7 @@ route '/schedule/speaker_thumbnails/*/' do
            else
              ""
            end
-  "/schedule/speaker/#{item[:slug]}-small#{suffix}.#{item[:extension]}"
+  "#{$prefix}/schedule/speaker/#{item[:slug]}-small#{suffix}.#{item[:extension]}"
 end
 
 # do _not_ deploy the files under content/sponsors/ as they are only used
@@ -298,15 +323,15 @@ route '/sponsors/*/' do
       case size
       when 'big'
         # big logos: /sponsored-by/google.png
-        "/sponsored-by/#{name}#{suffix}.#{item[:extension]}"
+        "#{$prefix}/sponsored-by/#{name}#{suffix}.#{item[:extension]}"
       when 'small'
         # small logos: /sponsored-by/thumb/oreilly.png
-        "/sponsored-by/thumb/#{name}#{suffix}.#{item[:extension]}"
+        "#{$prefix}/sponsored-by/thumb/#{name}#{suffix}.#{item[:extension]}"
       else
-        raise "wtf?"
+        raise "wtf? ran into a sponsor logo that is neither :big nor :small"
       end
     else
-      "/sponsored-by/#{item.id}.#{item[:extension]}"
+      "#{$prefix}/sponsored-by/#{item.id}.#{item[:extension]}"
     end
   else
     # do nothing with the non-binary files
@@ -314,15 +339,12 @@ route '/sponsors/*/' do
 end
 
 route '*' do
-  if item.binary?
-    # Write binary item with identifier /foo/ to /foo.ext
-    item.identifier.chop + '.' + item[:extension]
-  elsif item[:extension] == 'xml'
-    # Write XML files with identifier /foo/ to /foo.xml
-    item.identifier.chop + '.' + item[:extension]
+  if item.binary? or ['xml'].include? item[:extension]
+    # Write binary item and XML files with identifier /foo/ to /foo.ext
+    "#{$prefix}#{item.identifier.chop}.#{item[:extension]}"
   else
     # Write text item with identifier /foo/ to /foo/index.html
-    item.identifier + 'index.html'
+    "#{$prefix}#{item.identifier}index.html"
   end
 end
 
