add bootstrap glyphs + rule

--- a/Rules
+++ b/Rules
@@ -273,6 +273,9 @@ route '/assets/style/*/' do
            end
   "#{$prefix}#{item.identifier.chop}#{suffix}.#{item[:extension]}"
 end
+route '/assets/img/*/' do
+  "#{$prefix}#{item.identifier.chop}.#{item[:extension]}"
+end
 route '/assets/*/' do
   suffix = if @site.config[:digest_assets]
              "-" + digest(item)
