applied changes as requested by tias: new motto, move sponsors under navigation on transportation page, remove events and speakers from schedule navigation and add saturday and sunday instead

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -7,10 +7,10 @@ navigation:
     - /about/sponsors/
     - /about/faq/
   - /schedule/:
+    - /schedule/day/saturday/
+    - /schedule/day/sunday/
     - /schedule/tracks/
     - /schedule/events/
-    - /schedule/speakers/
-    - /schedule/rooms/
   - Practical Information:
     - /practical/beerevent/
     - /practical/transportation/
