--- a/Rules
+++ b/Rules
@@ -212,11 +212,7 @@ compile '*' do
         # http://userprimary.net/posts/2011/01/10/optimizing-nanoc-based-websites/
         # for inspiration, as well as
         # https://developers.google.com/speed/docs/best-practices/rendering#SpecifyImageDimensions
-        ##filter :imagesize
-        # ^^ disabled for now, Nokogiri is buggy on HTML fragments, need to replace it
-        #    with an XML parser in lib/filters/imagesize.rb -- try to use img() instead
-        #    as it creates <img/> elements with width and height attributes directly,
-        #    which is faster than running a filter on everything
+        filter :imagesize
 
       end
       
