add catering, jobcorner and services pages

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -15,6 +15,9 @@ navigation:
   - Practical Information:
     - /practical/beerevent/
     - /practical/transportation/
+    - /practical/catering/
+    - /practical/services/
+    - /practical/jobcorner/
   - Media and press:
     - /interviews/
 
