navigation: two items into one for the time tables

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -7,8 +7,7 @@ navigation:
     - /about/sponsors/
     - /about/faq/
   - /schedule/:
-    - /schedule/day/saturday/
-    - /schedule/day/sunday/
+    - /schedule/days/
     - /schedule/tracks/
     - /schedule/events/
     - /distrominiconf/
