add accomodation page

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -14,6 +14,7 @@ navigation:
   - Practical Information:
     - /practical/beerevent/
     - /practical/transportation/
+    - /practical/accommodation/
     - /practical/catering/
     - /practical/services/
     - /practical/jobcorner/
